src/App.css
.App {
  text-align: center;
}
@font-face {
  font-family: 'Gratelos';
  src: url('../src/asset/gratelos/GratelosDisplay.woff2') format('woff2'); 
  src:url('../src/asset/gratelos/DM_Sans.zip') format('truestyle')
  
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@font-face {
  font-family: "Gratelos";
  src: url("../public/fonts/GratelosDisplay.woff2") format("woff2"),
       url("../public/fonts/GratelosDisplay.woff") format("woff");
}

* {
  font-family: "Gratelos", sans-serif !important;
}

